--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
   xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>jackhammer</groupId>
+  <groupId>org.jackhammer</groupId>
   <artifactId>jackhammer</artifactId>
   <name>Jackhammer</name>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1.r1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>JSON API for Hadoop</description>
   <url>https://github.com/jackhammer/</url>
