--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.7</version>
+    </dependency>
   </dependencies>
 
 </project>
