--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <groupId>org.jackhammer</groupId>
   <artifactId>jackhammer</artifactId>
   <name>Jackhammer</name>
-  <version>0.1.r10-SNAPSHOT</version>
+  <version>0.1.r11-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>JSON API for Hadoop</description>
   <url>https://github.com/jackhammer/</url>
@@ -103,6 +103,11 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.7</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.5.1</version>
     </dependency>
   </dependencies>
 
