--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <groupId>org.jackhammer</groupId>
   <artifactId>jackhammer</artifactId>
   <name>Jackhammer</name>
-  <version>0.1.r11-SNAPSHOT</version>
+  <version>0.1.r12-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>JSON API for Hadoop</description>
   <url>https://github.com/jackhammer/</url>
@@ -94,12 +94,6 @@
       <version>14.0.1</version>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.7</version>
@@ -108,6 +102,20 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
       <version>2.5.1</version>
+    </dependency>
+
+    <!-- Test dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.1.3</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 
