Map-Reduce framework for JSON files. Reviewed by Aditya. http://rboard.corp.maprtech.com/r/471/
Includes the following changes
MAPR-18764, MAPR-18945, MAPR-18318, MAPR-19078, MAPR-19108, MAPR-19024, MAPR-19143, MAPR-19140.

--- a/map-reduce/pom.xml
+++ b/map-reduce/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.jackhammer</groupId>
     <artifactId>jackhammer-root</artifactId>
-    <version>0.1.r15-SNAPSHOT</version>
+    <version>0.1.r16-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
@@ -46,6 +46,11 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-mapreduce-client-core</artifactId>
+      <version>${hadoop.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
       <version>${hadoop.version}</version>
     </dependency>
   </dependencies>
