--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
   <groupId>org.jackhammer</groupId>
   <artifactId>jackhammer-root</artifactId>
-  <version>0.1.r15-SNAPSHOT</version>
+  <version>0.1.r16-SNAPSHOT</version>
 
   <name>Jackhammer ROOT pom</name>
   <packaging>pom</packaging>
@@ -75,5 +75,20 @@
         </plugin>
     </plugins>
   </build>
+  <dependencies>
+    <!-- Test dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.1.3</version>
+      <scope>runtime</scope>
+    </dependency>
+  </dependencies>
 
 </project>
