--- a/core/pom.xml
+++ b/core/pom.xml
@@ -35,6 +35,7 @@
   <build>
 
     <plugins>
+
       <plugin>
         <groupId>org.antlr</groupId>
         <artifactId>antlr4-maven-plugin</artifactId>
@@ -63,6 +64,12 @@
       <groupId>org.antlr</groupId>
       <artifactId>antlr4-runtime</artifactId>
       <version>4.5</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>org.abego.treelayout.core</artifactId>
+          <groupId>org.abego.treelayout</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
