--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
   <url>https://github.com/mapr/argonaut</url>
 
   <properties>
+    <slf4j.version>1.7.12</slf4j.version>
     <hadoop.version>2.5.1</hadoop.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -119,17 +120,17 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.7.7</version>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>${slf4j.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
         <version>2.5.1</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-        <version>1.2</version>
       </dependency>
       <dependency>
         <groupId>org.argonaut</groupId>
@@ -142,6 +143,7 @@
         <version>${hadoop.version}</version>
         <exclusions>
           <exclusion>
+            <!-- requires maven 3.2.1 -->
             <groupId>*</groupId>
             <artifactId>*</artifactId>
           </exclusion>
@@ -154,10 +156,24 @@
         <version>${hadoop.version}</version>
         <exclusions>
           <exclusion>
+            <!-- requires maven 3.2.1 -->
             <groupId>*</groupId>
             <artifactId>*</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <!-- Test dependencies -->
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.1.3</version>
+        <scope>provided</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -167,14 +183,10 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.1.3</version>
-      <scope>runtime</scope>
     </dependency>
   </dependencies>
 
