Prepare for release 0.1.r1

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.ojai</groupId>
     <artifactId>ojai-root</artifactId>
-    <version>0.1.r1-SNAPSHOT</version>
+    <version>0.1.r1</version>
     <relativePath>..</relativePath>
   </parent>
 
