--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,10 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.18.1</version>
+          <configuration>
+            <!-- Force the time zone to the PDT timezone to ensure proper parsing of date/time strings -->
+            <argLine>-Duser.timezone=GMT-07</argLine>
+          </configuration>
         </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
