--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.ojai</groupId>
     <artifactId>ojai-root</artifactId>
-    <version>0.2.r5-SNAPSHOT</version>
+    <version>0.2.r6-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
@@ -39,19 +39,43 @@
       <plugin>
         <groupId>org.antlr</groupId>
         <artifactId>antlr4-maven-plugin</artifactId>
-        <configuration>
-          <arguments>
-            <argument>-o</argument>
-            <argument>${project.build.directory}/generated-sources/antlr4/org/ojai</argument>
-          </arguments>
-        </configuration>
         <executions>
           <execution>
+            <id>fieldPath</id>
             <goals>
               <goal>antlr4</goal>
             </goals>
+            <configuration>
+              <includes><include>**/FieldPath.g4</include></includes>
+              <outputDirectory>${project.build.directory}/generated-sources/antlr4/org/ojai</outputDirectory>
+            </configuration>
           </execution>
         </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.4.1</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals><goal>shade</goal></goals>
+          </execution>
+        </executions>
+        <configuration>
+          <minimizeJar>true</minimizeJar>
+          <createDependencyReducedPom>true</createDependencyReducedPom>
+          <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
+          <artifactSet>
+            <includes>
+              <include>joda-time:joda-time</include>
+            </includes>
+          </artifactSet>
+          <relocations>
+            <relocation><pattern>org.joda.time.</pattern><shadedPattern>org.ojai.joda.</shadedPattern></relocation>
+          </relocations>
+        </configuration>
       </plugin>
 
     </plugins>
@@ -82,6 +106,11 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.9.1</version>
     </dependency>
 
     <dependency>
