--- a/pom.xml
+++ b/pom.xml
@@ -135,35 +135,40 @@
             <argLine>-Duser.timezone=GMT-07</argLine>
           </configuration>
         </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.6</version>
-            <configuration>
-              <archive>
-                <manifest>
-                  <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                </manifest>
-                <manifestEntries>
-                  <git-commit-id>${git.commit.id}</git-commit-id>
-                  <git-tags>${git.tags}</git-tags>
-                  <git-commit-message>${git.commit.message.short}</git-commit-message>
-                  <git-commit-user-name>${git.commit.user.name}</git-commit-user-name>
-                  <git-commit-time>${git.commit.time}</git-commit-time>
-                  <git-branch>${git.branch}</git-branch>
-                  <git-dirty>${git.dirty}</git-dirty>
-                </manifestEntries>
-              </archive>
-            </configuration>
-            <executions>
-              <execution>
-                <goals><goal>test-jar</goal></goals>
-                <configuration>
-                  <skipIfEmpty>true</skipIfEmpty>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>2.6</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              </manifest>
+              <manifestEntries>
+                <git-commit-id>${git.commit.id}</git-commit-id>
+                <git-tags>${git.tags}</git-tags>
+                <git-commit-message>${git.commit.message.short}</git-commit-message>
+                <git-commit-user-name>${git.commit.user.name}</git-commit-user-name>
+                <git-commit-time>${git.commit.time}</git-commit-time>
+                <git-branch>${git.branch}</git-branch>
+                <git-dirty>${git.dirty}</git-dirty>
+              </manifestEntries>
+            </archive>
+          </configuration>
+          <executions>
+            <execution>
+              <goals><goal>test-jar</goal></goals>
+              <configuration>
+                <skipIfEmpty>true</skipIfEmpty>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5.3</version>
+        </plugin>
       </plugins>
     </pluginManagement>
 
