--- a/map-reduce/pom.xml
+++ b/map-reduce/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.ojai</groupId>
     <artifactId>ojai-root</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1-mapr-1703-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
