--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
 
     <slf4j.version>1.7.12</slf4j.version>
     <hadoop.version>2.7.1</hadoop.version>
-    <jackson.version>2.7.1</jackson.version>
+    <jackson.version>2.7.2</jackson.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <gpg.useagent>true</gpg.useagent>
@@ -96,6 +96,7 @@
   <modules>
     <module>core</module>
     <module>map-reduce</module>
+    <module>scala</module>
   </modules>
 
   <build>
@@ -168,6 +169,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>2.5.3</version>
+        </plugin>
+        <plugin>
+          <groupId>net.alchim31.maven</groupId>
+          <artifactId>scala-maven-plugin</artifactId>
+          <version>3.2.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -281,6 +287,11 @@
             <artifactId>*</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.module</groupId>
+        <artifactId>jackson-module-scala_2.11</artifactId>
+        <version>${jackson.version}</version>
       </dependency>
       <!-- Test dependencies -->
       <dependency>
