--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.10.3</version>
+          <version>2.10.4</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -366,6 +366,7 @@
                   <goal>jar</goal>
                 </goals>
                 <configuration>
+                  <failOnError>false</failOnError>
                 </configuration>
               </execution>
             </executions>
