--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
     <distMgmtStagingName>Sonatype Release Distribution Repository</distMgmtStagingName>
     <distMgmtStagingUrl>https://oss.sonatype.org/service/local/staging/deploy/maven2</distMgmtStagingUrl>
 
+    <guava.version>18.0</guava.version>
     <slf4j.version>1.7.12</slf4j.version>
     <hadoop.version>2.7.1</hadoop.version>
     <jackson.version>2.7.2</jackson.version>
@@ -231,7 +232,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>14.0.1</version>
+        <version>${guava.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
