--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
   <groupId>org.ojai</groupId>
   <artifactId>ojai-root</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.0</version>
 
   <name>OJAI Root Pom</name>
   <packaging>pom</packaging>
@@ -77,7 +77,7 @@
   </distributionManagement>
 
   <properties>
-    <ojai.version>2.0-SNAPSHOT</ojai.version>
+    <ojai.version>2.0</ojai.version>
 
     <distMgmtSnapshotsId>ossrh</distMgmtSnapshotsId>
     <distMgmtSnapshotsName>Sonatype Snapshot Repository</distMgmtSnapshotsName>
