Added scala-doc goal to scala module

--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -43,6 +43,7 @@
           <execution>
             <goals>
               <goal>compile</goal>
+              <goal>doc-jar</goal>
               <goal>testCompile</goal>
             </goals>
           </execution>
