Moved `FieldPath` Antlr4 Grammar to the Top Level Folder
This will ease consumption of the grammar by other languages, say Python.

--- a/java/core/pom.xml
+++ b/java/core/pom.xml
@@ -46,7 +46,8 @@
               <goal>antlr4</goal>
             </goals>
             <configuration>
-              <includes><include>**/FieldPath.g4</include></includes>
+              <includes><include>FieldPath.g4</include></includes>
+              <sourceDirectory>${basedir}/../../antlr4</sourceDirectory>
               <outputDirectory>${project.build.directory}/generated-sources/antlr4/org/ojai/antlr4</outputDirectory>
             </configuration>
           </execution>
