--- a/java/map-reduce/pom.xml
+++ b/java/map-reduce/pom.xml
@@ -24,8 +24,8 @@
   <parent>
     <groupId>org.ojai</groupId>
     <artifactId>ojai-root</artifactId>
-    <version>2.1-SNAPSHOT</version>
-    <relativePath/>
+    <version>3.0-SNAPSHOT</version>
+    <relativePath>../..</relativePath>
   </parent>
 
   <artifactId>ojai-mapreduce</artifactId>
