--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
 
   <groupId>org.ojai</groupId>
   <artifactId>ojai-root</artifactId>
-  <version>2.1-SNAPSHOT</version>
 
   <name>OJAI Root Pom</name>
   <packaging>pom</packaging>
@@ -76,8 +75,10 @@
     </snapshotRepository>
   </distributionManagement>
 
+  <!-- When the version is updated, ensure that the property 'ojai.version' is also updated with the same literal string -->
+  <version>3.0-SNAPSHOT</version>
   <properties>
-    <ojai.version>2.1-SNAPSHOT</ojai.version>
+    <ojai.version>3.0-SNAPSHOT</ojai.version>
 
     <distMgmtSnapshotsId>ossrh</distMgmtSnapshotsId>
     <distMgmtSnapshotsName>Sonatype Snapshot Repository</distMgmtSnapshotsName>
