--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.ojai</groupId>
     <artifactId>ojai-root</artifactId>
-    <version>3.1-SNAPSHOT</version>
+    <version>3.1-mapr</version>
     <relativePath>..</relativePath>
   </parent>
 
@@ -94,6 +94,11 @@
                 </goals>
               </execution>
             </executions>
+            <configuration>
+              <args>
+                <arg>-nobootcp</arg>
+              </args>
+            </configuration>
           </plugin>
         </plugins>
       </build>
