Updated jackson-databind from 2.9.10.1 to 2.9.10.5
- Plus some plugin versions

--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -94,6 +94,11 @@
                 </goals>
               </execution>
             </executions>
+            <configuration>
+              <args>
+                <arg>-nobootcp</arg>
+              </args>
+            </configuration>
           </plugin>
         </plugins>
       </build>
