--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
     <guava.version>18.0</guava.version>
     <slf4j.version>1.7.12</slf4j.version>
     <jackson.version>2.9.10</jackson.version>
-    <jackson-databind.version>2.9.10.1</jackson-databind.version>
+    <jackson-databind.version>2.9.10.5</jackson-databind.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <gpg.useagent>true</gpg.useagent>
@@ -318,6 +318,11 @@
       <id>release</id>
       <build>
         <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>3.0.0-M1</version>
+          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
